force-app/main/default/objects/Syteline_PO__x/Syteline_PO__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$po</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$po</externalName>
    <label>Syteline_PO</label>
    <pluralLabel>Syteline_PO</pluralLabel>
</CustomObject>