force-app/main/default/objects/Syteline_PO__x/fields/buyer_nbr__c.field-meta.xml
<CustomField>
    <fullName>buyer_nbr__c</fullName>
    <description>buyer_nbr</description>
    <externalDeveloperName>buyer_nbr</externalDeveloperName>
    <label>buyer_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>