force-app/main/default/objects/Syteline_PO__x/fields/dist_date__c.field-meta.xml
<CustomField>
    <fullName>dist_date__c</fullName>
    <description>dist_date</description>
    <externalDeveloperName>dist_date</externalDeveloperName>
    <label>dist_date</label>
    <type>Date</type>
</CustomField>