force-app/main/default/objects/Syteline_PO__x/fields/drop_ship_no__c.field-meta.xml
<CustomField>
    <fullName>drop_ship_no__c</fullName>
    <description>drop_ship_no</description>
    <externalDeveloperName>drop_ship_no</externalDeveloperName>
    <label>drop_ship_no</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>