force-app/main/default/objects/Syteline_PO__x/fields/duty_vend_num__c.field-meta.xml
<CustomField>
    <fullName>duty_vend_num__c</fullName>
    <description>duty_vend_num</description>
    <externalDeveloperName>duty_vend_num</externalDeveloperName>
    <label>duty_vend_num</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>