force-app/main/default/objects/Syteline_PO__x/fields/fob__c.field-meta.xml
<CustomField>
    <fullName>fob__c</fullName>
    <description>fob</description>
    <externalDeveloperName>fob</externalDeveloperName>
    <label>fob</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>