force-app/main/default/objects/Syteline_PO__x/fields/freight__c.field-meta.xml
<CustomField>
    <fullName>freight__c</fullName>
    <description>freight</description>
    <externalDeveloperName>freight</externalDeveloperName>
    <label>freight</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>