force-app/main/default/objects/Syteline_PO__x/fields/freight_t__c.field-meta.xml
<CustomField>
    <fullName>freight_t__c</fullName>
    <description>freight_t</description>
    <externalDeveloperName>freight_t</externalDeveloperName>
    <label>freight_t</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>