force-app/main/default/objects/Syteline_PO__x/fields/freight_vend_num__c.field-meta.xml
<CustomField>
    <fullName>freight_vend_num__c</fullName>
    <description>freight_vend_num</description>
    <externalDeveloperName>freight_vend_num</externalDeveloperName>
    <label>freight_vend_num</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>