force-app/main/default/objects/Syteline_PO__x/fields/ins_alloc_method__c.field-meta.xml
<CustomField>
    <fullName>ins_alloc_method__c</fullName>
    <description>ins_alloc_method</description>
    <externalDeveloperName>ins_alloc_method</externalDeveloperName>
    <label>ins_alloc_method</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>