force-app/main/default/objects/Syteline_PO__x/fields/inv_date__c.field-meta.xml
<CustomField>
    <fullName>inv_date__c</fullName>
    <description>inv_date</description>
    <externalDeveloperName>inv_date</externalDeveloperName>
    <label>inv_date</label>
    <type>Date</type>
</CustomField>