force-app/main/default/objects/Syteline_PO__x/fields/inv_num__c.field-meta.xml
<CustomField>
    <fullName>inv_num__c</fullName>
    <description>inv_num</description>
    <externalDeveloperName>inv_num</externalDeveloperName>
    <label>inv_num</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>