force-app/main/default/objects/Syteline_PO__x/fields/last_printed_dt__c.field-meta.xml
<CustomField>
    <fullName>last_printed_dt__c</fullName>
    <description>last_printed_dt</description>
    <externalDeveloperName>last_printed_dt</externalDeveloperName>
    <label>last_printed_dt</label>
    <type>Date</type>
</CustomField>