force-app/main/default/objects/Syteline_PO__x/fields/loc_frt_alloc_method__c.field-meta.xml
<CustomField>
    <fullName>loc_frt_alloc_method__c</fullName>
    <description>loc_frt_alloc_method</description>
    <externalDeveloperName>loc_frt_alloc_method</externalDeveloperName>
    <label>loc_frt_alloc_method</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>