force-app/main/default/objects/Syteline_PO__x/fields/m_charges_t__c.field-meta.xml
<CustomField>
    <fullName>m_charges_t__c</fullName>
    <description>m_charges_t</description>
    <externalDeveloperName>m_charges_t</externalDeveloperName>
    <label>m_charges_t</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>