force-app/main/default/objects/Syteline_PO__x/fields/misc_charges__c.field-meta.xml
<CustomField>
    <fullName>misc_charges__c</fullName>
    <description>misc_charges</description>
    <externalDeveloperName>misc_charges</externalDeveloperName>
    <label>misc_charges</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>