force-app/main/default/objects/Syteline_PO__x/fields/order_dt__c.field-meta.xml
<CustomField>
    <fullName>order_dt__c</fullName>
    <description>order_dt</description>
    <externalDeveloperName>order_dt</externalDeveloperName>
    <label>order_dt</label>
    <type>Date</type>
</CustomField>