force-app/main/default/objects/Syteline_PO__x/fields/po_cost__c.field-meta.xml
<CustomField>
    <fullName>po_cost__c</fullName>
    <description>po_cost</description>
    <externalDeveloperName>po_cost</externalDeveloperName>
    <label>po_cost</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>