force-app/main/default/objects/Syteline_PO__x/fields/po_nbr__c.field-meta.xml
<CustomField>
    <fullName>po_nbr__c</fullName>
    <description>po_nbr</description>
    <externalDeveloperName>po_nbr</externalDeveloperName>
    <label>po_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>