force-app/main/default/objects/Syteline_PO__x/fields/print_price__c.field-meta.xml
<CustomField>
    <fullName>print_price__c</fullName>
    <description>print_price</description>
    <externalDeveloperName>print_price</externalDeveloperName>
    <label>print_price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>