force-app/main/default/objects/Syteline_PO__x/fields/received_ind__c.field-meta.xml
<CustomField>
    <fullName>received_ind__c</fullName>
    <description>received_ind</description>
    <externalDeveloperName>received_ind</externalDeveloperName>
    <label>received_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>