force-app/main/default/objects/Syteline_PO__x/fields/record_dt__c.field-meta.xml
<CustomField>
    <fullName>record_dt__c</fullName>
    <description>record_dt</description>
    <externalDeveloperName>record_dt</externalDeveloperName>
    <label>record_dt</label>
    <type>Date</type>
</CustomField>