force-app/main/default/objects/Syteline_PO__x/fields/sales_tax__c.field-meta.xml
<CustomField>
    <fullName>sales_tax__c</fullName>
    <description>sales_tax</description>
    <externalDeveloperName>sales_tax</externalDeveloperName>
    <label>sales_tax</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>