force-app/main/default/objects/Syteline_PO__x/fields/ship_addr__c.field-meta.xml
<CustomField>
    <fullName>ship_addr__c</fullName>
    <description>ship_addr</description>
    <externalDeveloperName>ship_addr</externalDeveloperName>
    <label>ship_addr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>