force-app/main/default/objects/Syteline_PO__x/fields/ship_code__c.field-meta.xml
<CustomField>
    <fullName>ship_code__c</fullName>
    <description>ship_code</description>
    <externalDeveloperName>ship_code</externalDeveloperName>
    <label>ship_code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>