force-app/main/default/objects/Syteline_PO__x/fields/stat__c.field-meta.xml
<CustomField>
    <fullName>stat__c</fullName>
    <description>stat</description>
    <externalDeveloperName>stat</externalDeveloperName>
    <label>stat</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>