force-app/main/default/objects/Syteline_PO__x/fields/terms_code__c.field-meta.xml
<CustomField>
    <fullName>terms_code__c</fullName>
    <description>terms_code</description>
    <externalDeveloperName>terms_code</externalDeveloperName>
    <label>terms_code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>