force-app/main/default/objects/Syteline_PO__x/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>type</description>
    <externalDeveloperName>type</externalDeveloperName>
    <label>type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>