force-app/main/default/objects/Syteline_PO__x/fields/vend_lcr_num__c.field-meta.xml
<CustomField>
    <fullName>vend_lcr_num__c</fullName>
    <description>vend_lcr_num</description>
    <externalDeveloperName>vend_lcr_num</externalDeveloperName>
    <label>vend_lcr_num</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>