force-app/main/default/objects/Syteline_PO__x/fields/vend_order__c.field-meta.xml
<CustomField>
    <fullName>vend_order__c</fullName>
    <description>vend_order</description>
    <externalDeveloperName>vend_order</externalDeveloperName>
    <label>vend_order</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>