force-app/main/default/objects/Syteline_PO__x/fields/vendor_nbr__c.field-meta.xml
<CustomField>
    <fullName>vendor_nbr__c</fullName>
    <description>vendor_nbr</description>
    <externalDeveloperName>vendor_nbr</externalDeveloperName>
    <label>vendor_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>