force-app/main/default/objects/Syteline_PO__x/fields/whse_id__c.field-meta.xml
<CustomField>
    <fullName>whse_id__c</fullName>
    <description>whse_id</description>
    <externalDeveloperName>whse_id</externalDeveloperName>
    <label>whse_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>